; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/resowner/extr_resowner.c_ReleaseAuxProcessResources.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/resowner/extr_resowner.c_ReleaseAuxProcessResources.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AuxProcessResourceOwner = common dso_local global i32 0, align 4
@RESOURCE_RELEASE_BEFORE_LOCKS = common dso_local global i32 0, align 4
@RESOURCE_RELEASE_LOCKS = common dso_local global i32 0, align 4
@RESOURCE_RELEASE_AFTER_LOCKS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ReleaseAuxProcessResources(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @AuxProcessResourceOwner, align 4
  %4 = load i32, i32* @RESOURCE_RELEASE_BEFORE_LOCKS, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @ResourceOwnerRelease(i32 %3, i32 %4, i32 %5, i32 1)
  %7 = load i32, i32* @AuxProcessResourceOwner, align 4
  %8 = load i32, i32* @RESOURCE_RELEASE_LOCKS, align 4
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @ResourceOwnerRelease(i32 %7, i32 %8, i32 %9, i32 1)
  %11 = load i32, i32* @AuxProcessResourceOwner, align 4
  %12 = load i32, i32* @RESOURCE_RELEASE_AFTER_LOCKS, align 4
  %13 = load i32, i32* %2, align 4
  %14 = call i32 @ResourceOwnerRelease(i32 %11, i32 %12, i32 %13, i32 1)
  ret void
}

declare dso_local i32 @ResourceOwnerRelease(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
